Feat: Create exe mode